RESOLVED FIXED187216
DeclarativeAnimation should suspend, resume, & stop m_eventQueue
https://bugs.webkit.org/show_bug.cgi?id=187216
Summary DeclarativeAnimation should suspend, resume, & stop m_eventQueue
Ryosuke Niwa
Reported 2018-06-29 23:32:11 PDT
We need to stop/suspend GenericEventQueue when DeclarativeAnimation, as an active DOM object, gets stopped, suspended. We should also resume it when we get out of the page cache, etc..
Attachments
Patch (3.95 KB, patch)
2018-07-19 18:04 PDT, Antoine Quint
rniwa: review+
Radar WebKit Bug Importer
Comment 1 2018-06-30 00:02:49 PDT
Antoine Quint
Comment 2 2018-07-19 17:21:13 PDT
DeclarativeAnimation is not an ActiveDOMObject… yet :)
Antoine Quint
Comment 3 2018-07-19 17:21:41 PDT
Except its superclass, WebAnimation, is. Duh.
Antoine Quint
Comment 4 2018-07-19 18:04:18 PDT
Ryosuke Niwa
Comment 5 2018-07-19 19:24:44 PDT
Comment on attachment 345412 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=345412&action=review > Source/WebCore/animation/DeclarativeAnimation.cpp:220 > + ActiveDOMObject::suspend(reason); There is no need to call this. It's empty. But we should call WebAnimation::suspend(reason) to make this code future proof. > Source/WebCore/animation/DeclarativeAnimation.cpp:226 > + ActiveDOMObject::resume(); Ditto.
Antoine Quint
Comment 6 2018-07-20 10:08:49 PDT
Note You need to log in before you can comment on or make changes to this bug.