DeclarativeAnimation should suspend, resume, & stop m_eventQueue https://bugs.webkit.org/show_bug.cgi?id=187216 <rdar://problem/41669739>

Reviewed by Ryosuke Niwa.

Suspend, resume and close the GenericEventQueue for DeclarativeAnimation as instructed through the DOMActiveObject protocol.

* animation/DeclarativeAnimation.cpp:
(WebCore::DeclarativeAnimation::stop):
(WebCore::DeclarativeAnimation::suspend):
(WebCore::DeclarativeAnimation::resume):
* animation/DeclarativeAnimation.h:
* animation/WebAnimation.h:

Canonical link: https://commits.webkit.org/203039@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@234049 268f45cc-cd09-0410-ab3c-d52691b4dbfc